--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@types/cropme",
+  "name": "cropme-ts",
   "types": "index.d.ts",
   "version": "0.1.0-beta.1",
   "description": "`cropme` for Typescript",
