--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "cropme-ts",
   "types": "index.d.ts",
-  "version": "0.1.0-beta.1",
+  "homepage": "https://github.com/m1nque/cropme-ts",
+  "author": {
+    "name": "m1nque (Pronounce as min Q)",
+    "url": "https://github.com/m1nque"
+  },
+  "version": "0.1.0-beta.2",
   "description": "`cropme` for Typescript",
   "peerDependencies": {
     "cropme": "1.4.3"
