--- a/package.json
+++ b/package.json
@@ -11,10 +11,9 @@
     "crop",
     "cropme"
   ],
-  "module": "index.js",
-  "main": "index.js",
+  "main": "index.d.ts",
   "types": "index.d.ts",
-  "version": "0.1.2-beta.1",
+  "version": "0.1.3-beta.1",
   "description": "`cropme` for Typescript",
   "dependencies": {
     "cropme": "^1.4.3"
